--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "lint": "eslint . && prettier-eslint --list-different **/*.js",
-    "format": "prettier-eslint --write **/*.js"
+    "lint": "eslint . --list-different **/*.js",
+    "format": "prettier-eslint --write **/*.js",
+    "build": "webpack --config webpack.config.js",
+    "dev": "webpack-dev-server --config webpack.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,12 +16,23 @@
     "@babel/core": "^7.18.2",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.0",
     "babel-jest": "^28.1.0",
+    "babel-loader": "^8.2.5",
     "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^26.4.6",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.30.0",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^28.1.0",
-    "prettier-eslint-cli": "^6.0.1"
+    "jest-environment-jsdom": "^28.1.0",
+    "prettier-eslint-cli": "^6.0.1",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.2"
   },
   "dependencies": {
     "react": "^18.1.0",
